syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "KeymanagerGrpc";

package br.com.zup.edu.grpc;

import "google/protobuf/timestamp.proto";

service KeymanagerRegistraGrpcService {
    rpc registra(RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

enum TipoDeChave {
    UNKNOWN_TIPO_CHAVE = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    ALEATORIA = 4;
}

enum TipoDeConta {
    UNKNOWN_TIPO_CONTA = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
}

/**
 * Registra chave
 */
message RegistraChavePixRequest {
    string clienteId = 1;
    TipoDeChave tipoDeChave = 2;
    string chave = 3;
    TipoDeConta tipoDeConta = 4;
}

message RegistraChavePixResponse {
    string clienteId = 1;
    string pixId = 2;
}